--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <header>
-        <h1><a href="#">save earth</a></h1>
+        <h1><a href="#">save us</a></h1>
         <nav>
-            <a href="#">main</a>
-            <a href="#">p-log</a>
-            <a href="#">plogging</a>
-            <a href="#">how to</a>
-            <a href="#">for-you</a>
-            <a href="#">with us</a>
+            <a href="#mainpage">main</a>
+            <a href="#plog">p-log</a>
+            <a href="#about">plogging</a>
+            <a href="#howto">how to</a>
+            <a href="#foryou">for-you</a>
+            <a href="#endpage">with us</a>
         </nav>
     </header>
     <main>
-        <div class="mainpage">
+        <div id="mainpage">
             <p></p>
             <p></p>
             <p></p>
@@ -29,14 +29,14 @@
             <p></p>
             <p></p>
         </div>
-        <div class="contents">
-            <div class="plog bg_odd">
-                <h2>Plogging</h2>
+        <div id="contents">
+            <div class="bg_odd" id="plog">
+                <h1 class="title_top">Plogging</h1>
                 <iframe width="794" height="447" src="https://www.youtube.com/embed/7XrxTrejx8w" title="요즘 유행하는 북유럽 운동문화 플로깅(Plogging)! 건강을 지키며 환경도 지켜요!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>log</h2>
+                <h1 class="title_btm">log</h1>
             </div>
-            <div class="about bg_even">
-                <h1>About</h1>
+            <div class="bg_even" id="about">
+                <h1 class="title_top">About</h1>
                 <div class="about-contents">
                     <h2>플로깅이란?</h2>
                     <p>스웨덴어 ‘plocka upp’과<br>
@@ -46,10 +46,10 @@
                         현재는 전세계의 주목을 받고 있어요<br>
                         한국에서는 줍깅이나 쓰담달리기 등으로 불리기도 해요</p>
                 </div>
-                <h1>plogging</h1>
+                <h1 class="title_btm">plogging</h1>
             </div>
-            <div class="howto bg_odd">
-                <h1>How</h1>
+            <div class="bg_odd" id="howto">
+                <h1 class="title_top">How</h1>
                 <ul>
                     <li>
                         <p></p>
@@ -60,13 +60,13 @@
                         </div>
                     </li>
                     <li>
-                        <p></p>
                         <div class="li2 howto_contents">
                             <h2>담아요</h2>
                             <p><span>쓰레기를 발견하면</span>
                                 <span>집게로 집어</span>
                                 <span>준비한 봉투에 담아요</span></p>
-                        </div>
+                            </div>
+                        <p></p>
                     </li>
                     <li>
                         <p></p>
@@ -78,16 +78,16 @@
                         </div>
                     </li>
                 </ul>
-                <h1>to</h1>
+                <h1 class="title_btm">to</h1>
             </div>
-            <div class="plog bg_even">
-                <h1>For</h1>
+            <div class="bg_even" id="foryou">
+                <h1 class="title_top">For</h1>
                 <p></p>
                 <p>처음 참가하시는 분들께 제로웨이스트 키트를 드려요</p>
-                <h1>you</h1>
+                <h1 class="title_btm">you</h1>
             </div>
         </div>
-        <div class="endpage">
+        <div id="endpage">
             <p></p>
             <button>with us!</button>
         </div>
