--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
                         <p></p>
                         <div class="li1 howto_contents">
                             <h2>걸어요</h2>
-                            <p><span>플로깅 할 장소에서</span>
+                            <p><span>플로깅 할 장소에서</span><br>
                                 <span>조깅을 하듯이 걸어요</span></p>
                         </div>
                     </li>
                     <li>
                         <div class="li2 howto_contents">
                             <h2>담아요</h2>
-                            <p><span>쓰레기를 발견하면</span>
-                                <span>집게로 집어</span>
+                            <p><span>쓰레기를 발견하면</span><br>
+                                <span>집게로 집어</span><br>
                                 <span>준비한 봉투에 담아요</span></p>
-                            </div>
+                        </div>
                         <p></p>
                     </li>
                     <li>
                         <p></p>
                         <div class="li3 howto_contents">
                             <h2>걸어요</h2>
-                            <p><span>쓰레기가 가득차면</span>
-                                <span>분리수거를 한 후</span>
+                            <p><span>쓰레기가 가득차면</span><br>
+                                <span>분리수거를 한 후</span><br>
                                 <span>일반쓰레기는 따로 버려요</span></p>
                         </div>
                     </li>
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div id="endpage">
-            <p></p>
+            <p><img src="./images/earth.png" alt=""></p>
             <button>with us!</button>
         </div>
     </main>
