--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's plogging!</title>
+    <!-- 파비콘 -->
+    <link rel="shortcut icon" href="./images/bluman_face.png" type="image/x-icon">
+    <link rel="icon" href="./images/bluman_face.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -82,7 +85,7 @@
             </div>
             <div class="bg_even" id="foryou">
                 <h1 class="title_top">For</h1>
-                <p></p>
+                <p class="zero_img"><img src="./images/zerowaste.png" alt=""></p>
                 <p>처음 참가하시는 분들께 제로웨이스트 키트를 드려요</p>
                 <h1 class="title_btm">you</h1>
             </div>
