--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+    <!-- 사이드내비 -->
+    <div class="side_nav">
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+    </div>
     <header>
         <h1><a href="#">save us</a></h1>
         <nav>
@@ -86,7 +97,7 @@
             <div class="bg_even" id="foryou">
                 <h1 class="title_top">For</h1>
                 <p class="zero_img"><img src="./images/zerowaste.png" alt=""></p>
-                <p>처음 참가하시는 분들께 제로웨이스트 키트를 드려요</p>
+                <p class="text">처음 참가하시는 분들께 제로웨이스트 키트를 드려요</p>
                 <h1 class="title_btm">you</h1>
             </div>
         </div>
