--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <a href="#"></a>
         <a href="#"></a>
     </div>
+    <!--배경 움직이는 오브제 -->
+    <div class="bg_ani">
+        <p id="recycle"><img src="./images/recycle.png" alt="#"></p>
+    </div>
     <header>
         <h1><a href="#">save us</a></h1>
         <nav>
